# resume-parser-ai-mcp

./: .cursorrules  .mcp.json  README.md  acp.json  glama.json  llms.txt  package.json  pyproject.toml  server.json  server.py  smithery.yaml
.github/workflows/: ci.yml  codeql.yml  mcp-smithery-publish.yml  scorecard.yml  test.yml
.well-known/: agent-card.json  agent.json  mcp-server-card.json
.well-known/mcp/: server-card.json
