[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "resume-parser-ai-mcp"
version = "1.0.6"
readme = "README.md"
description = "Resume Parser Ai MCP server. Tools: parse resume, extract skills, match job. Built by MEOK AI Labs."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "nicholas@meok.ai"}]
dependencies = ["mcp>=1.0.0"]
keywords = ["mcp", "ai", "meok", "resume", "parser"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/CSOAI-ORG/resume-parser-ai-mcp"
[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py", "auth_middleware.py"]

[project.scripts]
resume_parser_ai_mcp = "server:main"
